# rm_plotter

./: .gitignore  README.md  configs  setup.cfg  setup.py  test.py  test2.py  yyWW.py
.github/workflows/: python-package.yml
configs/: data.json  err.json  pad.json  pad_dm.json
src/plotter/: __init__.py  atlas.py  canvas.py  collection.py  dataset.py  histo.py  legend.py  loader.py  pad.py  pdgRounding.py  plottingbase.py  presets.py  quiet.py  styler.py  tfile2.py  thHelper.py  xsReader.py  yields.py
src/plotter/configs/: data.json  err.json  mc.json  pad.json  pad_dm.json
