[metadata]
name = plotter
version = 0.0.1
author = Filip Nechansky
description = job manager and interface for htcondor
#long_description = file: README.md
#long_description_content_type = text/markdown
#url = 
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
package_dir = =src
python_requires = >=3.6
#install_requires =
#    htcondor
#    classad

[flake8]
max-complexity = 12
max-line-length = 127
count = True
statistics = True
import-order-style = google
exclude = src/plotter/atlas.py
#exclude = docs/conf.py

[mypy]
files = src/plotter
exclude = src/plotter/atlas.py

[mypy-ROOT]
ignore_missing_imports = True